2010-11-01  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt.

        Multiple background properties are not retrievable via DOM method getComputedStyle
        https://bugs.webkit.org/show_bug.cgi?id=23203

        Return lists of values from getComputedStyle() for multiple backgrounds,
        and multiple masks.

        Test: fast/backgrounds/multiple-backgrounds-computed-style.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::fillSizeToCSSValue):
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

Canonical link: https://commits.webkit.org/61546@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71049 268f45cc-cd09-0410-ab3c-d52691b4dbfc